@@ -24,7 +24,7 @@ Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 #ifndef KINECT_INTERNAL_CONFIG_INCLUDED
 #define KINECT_INTERNAL_CONFIG_INCLUDED
 
-#define KINECT_INTERNAL_CONFIG_CONFIGDIR "/home/okreylos/Projects/Kinect/Config"
+#define KINECT_INTERNAL_CONFIG_CONFIGDIR "/usr/local/etc/Vrui-4.5/Kinect-3.6"
 
 #define KINECT_INTERNAL_CONFIG_CAMERA_DEPTHCORRECTIONFILENAMEPREFIX "DepthCorrection"
 #define KINECT_INTERNAL_CONFIG_CAMERA_INTRINSICPARAMETERSFILENAMEPREFIX "IntrinsicParameters"
@@ -32,7 +32,7 @@ Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 #define KINECT_INTERNAL_CONFIG_CAMERA_DEFAULTBACKGROUNDFILENAMEPREFIX "Background"
 #define KINECT_INTERNAL_CONFIG_CAMERA_BACKGROUNDFILENAMEEXTENSION ".background"
 
-#define KINECT_INTERNAL_CONFIG_SHADERDIR "/home/okreylos/Projects/Kinect/Shaders"
+#define KINECT_INTERNAL_CONFIG_SHADERDIR "/usr/local/share/Vrui-4.5/Kinect-3.6/Shaders"
 
 #define KINECT_INTERNAL_CONFIG_KINECTSERVER_CONFIGURATIONFILENAME "KinectServer.cfg"
 
