@@ -1,5 +1,5 @@
 ========================================================================
-README for Kinect 3D Video Capture Project version 3.5
+README for Kinect 3D Video Capture Project version 3.6
 Copyright (c) 2010-2018 Oliver Kreylos
 ========================================================================
 
