@@ -1,2 +1,2 @@
-Kinect 3D Video Capture Project 3.5
-release date 04/20/2018
+Kinect 3D Video Capture Project 3.6
+release date 06/29/2018
