@@ -42,7 +42,13 @@ endif
 # Which facade projector version is better depends on system hardware,
 # number of Kinect facades rendered simultaneously, rendering modes,
 # etc. I.e., to optimize performance, typical-case testing is in order.
-KINECT_PROJECTORTYPE = 1
+# The following code selects a reasonable choice based on whether the
+# local OpenGL supports the GL_EXT_gpu_shader4 extension required by
+# the Kinect::Projector2 vertex shader-based projector.
+PROJECTORTYPE=0
+ifneq ($(strip $(shell glxinfo | grep GL_EXT_gpu_shader4)),)
+  KINECT_PROJECTORTYPE = 1
+endif
 
 # Set configuration flags based on projector type choice:
 KINECT_USE_PROJECTOR2 = 0
@@ -62,9 +68,9 @@ endif
 PACKAGEROOT := $(shell pwd)
 
 # Specify version of created dynamic shared libraries
-KINECT_VERSION = 3005
+KINECT_VERSION = 3006
 MAJORLIBVERSION = 3
-MINORLIBVERSION = 5
+MINORLIBVERSION = 6
 KINECT_NAME := Kinect-$(MAJORLIBVERSION).$(MINORLIBVERSION)
 
 # Check if Vrui's collaboration infrastructure is installed
